istio/grpc/virtualservice-destrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-svc
spec:
  host: grpc-svc
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-svc
spec:
  hosts:
  - grpc-svc
  http:
  - route:
    - destination:
        host: grpc-svc
        subset: v1 #sesuai name pada destinationrule
